--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "setup": "npm i && lerna bootstrap",
     "start": "lerna run --parallel start",
+    "heroku-postbuild": "cd packages/atomic && npm i && npm run build",
     "build": "lerna run build",
     "test": "lerna run test",
     "test:watch": "lerna run --parallel test:watch --no-prefix",
